# AI_Common

./: .context_buffer.json  .gitignore  .last_notif.json  .zedrules  AGENTS.md  AI_REQUIREMENTS.md  CHANGELOG.md  CLAUDE.md  CortexOS_Control_Center.md  README.md  TODO.md  chrome-debug.sh  coding_rules.md  git_commit_rules.md  index.html  index.md  init_vibe.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  project_index.md  pyproject.toml  retrospective_example.md  tech_stack.md  temp_gemini_brain_fixed.md  vibe_rules.md  workflow_retro.md
.github/workflows/: deploy.yml
.memory/: memory_formula.md
.obsidian/: workspace.json
brain/: mcp_server.py
config/: brain-runtime.json
docs/: BRAIN_HISTORY.md  about.md  ai-team.md  index.md  mcp-console.md  router.md  skills.md  tech_stack.md
extensions/: auto-retro.md  claude_manifest.md  codex_manifest.md  codex_mcp_guide.md  codex_skills_protocol.md  feishu-writer.md  gemini_mcp_guide.md  gemini_skills_protocol.md  juejin-writer.md  logo_designer.md  milvus-toolkit.md  milvus_ingest_skill.md  milvus_rag_marker.md  pwa_master.md  snippet_master.md  think.md  token-estimator.md
mcp_server/: mcp_config.json  server.py
retrospectives/: INDEX.md
rules/: coding_rules.md  standard_workflow.md  vibe_rules.md
scripts/: activate_persona.sh  auto-pilot.js  g.sh  gemini_manager.sh  identity-check.js  init-project.sh  log.sh  milvus_ingest_and_record.sh  move-files.js  rag_probe.sh  record-operations.js  record_milvus_sync.sh  sentinel.js  test-lark.mjs  xiaozhu_chat.mjs
snippets/: _aliases.md  nodejs_mjs_usage.md
(+274 files in other folders)
